syntax = "proto3";

package mailchimp;

option go_package = "./proto;mailchimp";

service Mailchimp {
  rpc AddCustomer(AddCustomerRequest) returns (AddCustomerResponse) {}
  rpc DeleteCustomer(DeleteCustomerRequest) returns (DeleteCustomerResponse) {}
}

message AddCustomerRequest {
  string email = 1;
}

message AddCustomerResponse {}

message DeleteCustomerRequest {
  string email = 1;
}

message DeleteCustomerResponse {}
